--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,9 +4,13 @@ services:
     image: postgres
     environment:
       - POSTGRES_PASSWORD=admin
+  adminer:
+    image: adminer
+    ports:
+      - 8080:8080
   web:
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: bash ./bin/start
     volumes:
       - .:/webapp
     ports:
