--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -25,7 +25,7 @@ steps:
       - >-
         --labels=managed-by=gcp-cloud-build-deploy-cloud-run,commit-sha=$COMMIT_SHA,gcb-build-id=$BUILD_ID,gcb-trigger-id=$_TRIGGER_ID,$_LABELS
       - "--region=$_DEPLOY_REGION"
-      - '--set-secrets="RAILS_MASTER_KEY:liquid-rails-master-key:1"'
+      - '--set-secrets="RAILS_MASTER_KEY=liquid-rails-master-key:1"'
       - "--quiet"
     id: Deploy
     entrypoint: gcloud
